--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,11 @@
   "manifest_version": 2,
 
   "name": "WikiQuicki",
-  "description": "This extension gives a quick snippet of a Wikipedia article",
+  "description": "Gives a quick snippet of a Wikipedia article",
   "version": "1.0",
-
+  "icons": { "16": "icon.png",
+             "48": "icon.png",
+            "128": "icon.png" },
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
