--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,9 @@
   "name": "WikiQuicki",
   "description": "Gives a quick snippet of a Wikipedia article",
   "version": "1.0",
-  "icons": { "16": "icon.png",
-             "48": "icon.png",
-            "128": "icon.png" },
+  "icons": { "19": "icon19.png",
+             "48": "icon48.png",
+            "128": "icon128.png" },
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
